# mathslib

./: README.md  README.rst  README1.md  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  index.rst  mathslib.rst  modules.rst  primes.rst  readme.rst  requirements.txt  usage.rst
docs/_build/doctrees/: environment.pickle  index.doctree  installation.doctree  mathslib.doctree  modules.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  installation.html  mathslib.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/mathslib/: algorithms.html  divisors.html  fib.html  linalg.html  numtheory.html  primes.html  simple.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  mathslib.rst.txt  modules.rst.txt  usage.rst.txt
src/mathslib/: __init__.py  algorithms.py  divisors.py  fib.py  gaussianint.py  linalg.py  numtheory.py  primes.py  simple.py
src/mathslib.egg-info/: PKG-INFO  SOURCES.txt
tests/: mathslib_tests.py
