[metadata]
name = example-package-igorvanloo
version = 0.0.1
author = Igor van Loo
author_email = igorvanloo@gmail.com
description = A compilation of mathematical functions and alogrithms I have used to solve problems on Project Euler
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
