[metadata]
name = mathslib
version = 0.0.1
author = Igor van Loo
author_email = igorvanloo@gmail.com
description = A compilation of mathematical functions and alogrithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/igorvanloo/mathslib
project_urls =
    Bug Tracker = https://github.com/igorvanloo/mathslib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
